<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rgGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/with"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/with"/>
        <RadioButton
            android:id="@+id/or"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/or"/>

        <RadioButton
            android:id="@+id/shift_left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/shift_left"/>
        <RadioButton
            android:id="@+id/shift_right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/shift_right"/>
        <RadioButton
            android:id="@+id/not"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/not"/>
        <RadioButton
            android:id="@+id/non"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/non"/>
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">
        <CheckBox
            android:id="@+id/cbType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/out_type"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:onClick="onCalculate"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/A_1"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:hint="@string/input_a"
            android:gravity="center"
            android:inputType="number"
            android:digits="@string/limit"
            tools:ignore="Autofill"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/B_1"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:hint="@string/input_b"
            android:gravity="center"
            android:digits="@string/limit"
            tools:ignore="Autofill"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/C_1"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:hint="@string/results"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="false"
            android:clickable="false"
            android:focusable="false"
            tools:ignore="Autofill"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/vA"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/A_2"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tvA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:hint="@string/resultsA"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/flB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/vB"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/B_2"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tvB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:hint="@string/resultsB"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/vC"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/C_2"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tvC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:hint="@string/resultsC"/>
    </LinearLayout>



</LinearLayout>